build(openapi): upgrade OpenAPI Generator to version 6.2.0
OpenAPI Generator version used in modules perun-openapi and perun-cli-python was updated to 6.2.0.